k8s/TechSummit/back-end.yaml
apiVersion: v1
kind: Pod
metadata:
  name: mariadb 
  labels:
    app: mariadb 
spec:
  containers:
  - name: mariadb
    image: mariadb/server:10.1.37
    volumeMounts:
    - mountPath: /var/lib/mysql 
      name: data 
    ports:
        - containerPort: 3600 
  volumes:
  - name: data 
    # This VMDK volume must already exist.
    vsphereVolume:
      volumePath: "[Datastore] BACKEND-MARIADB/BACKEND-MARIADB_1.vmdk"
      fsType: ext4
