k8s/TechSummit/nginx.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx 
  labels:
    app: nginx 
spec:
  containers:
  - name: nginx 
    image: harbor.cpod-appstx.az-lab.shwrfr.com/library/nginx:latest
