k8s/TechSummit/php-fpm.yaml
apiVersion: v1
kind: Pod
metadata:
  name: php 
  labels:
    app: php 
spec:
  containers:
  - name: php 
    image: harbor.cpod-appstx.az-lab.shwrfr.com/library/php-fpm:latest 
---
apiVersion: v1
kind: Service
metadata:
  name: svc-php
spec:
  ports:
  - name: tcp 
    targetPort: 9000 
    port: 9000 
  selector:
    app: nginx 
  type: LoadBalancer
