k8s/TechSummit/php.yaml
apiVersion: v1
kind: Pod
metadata:
  name: php 
  labels:
    app: php 
spec:
  containers:
  - name: php
    image: php:7.2-fpm
---
apiVersion: v1
kind: Service
metadata:
  name: svc-php
spec:
  ports:
  - name: http
    targetPort: 9000 
    port: 9000 
  selector:
    app: nginx 
  type: LoadBalancer
